# structure_home_dist

./: Custom_GPCR_table.csv  Pipfile  RCSB_GPCR_structure_table.csv  README.md  custom_mapping.csv  internal_GPCR_structure_table.csv  internal_GPCR_table.csv  internal_custom_mapping.csv  pyproject.toml  update_metadata.py  wf.py  wf_align.py  wf_align_optsel.py
